Fetch certificate after adding/updating dataset

--- a/test-core.ini
+++ b/test-core.ini
@@ -18,6 +18,7 @@ port = 5000
 
 [app:main]
 use = config:../ckan/test-core.ini
+sqlalchemy.url = sqlite:///
 # Here we hard-code the database and a flag to make default tests
 # run fast.
 ckan.plugins = certificates
